TODO


#替换so101 USD中关节名和位置和材质 - 不行尝试两次不成功
#代码每个关节复现 so101 关节和材质 - 以保持物理属性的一致性 - 每个关节均手动设置 - 以导入的模型进行检查
#isaacsim 导入URDF 添加 USD
#WINDOWS->Example->robotics examples->hello world - 假的
#FEAT PIPER
生成一个加载机械臂USD_PATH 和orange OBJ_PATH的示例，并使用up down 选关节，left right控制关节大小，不改变原始代码


#TODO FIX
出现报错
2026-04-27T03:49:24Z [12,377ms] [Error] [omni.graph.core.plugin] /World/envs/env_0/Piper/ActionGraph/isaac_create_render_product: [/World/envs/env_0/Piper/ActionGraph] Assertion raised in compute - No valid sensor paths provided
  File "/home/hyl/miniconda3/envs/env_isaaclab/lib/python3.11/site-packages/isaacsim/exts/isaacsim.core.nodes/isaacsim/core/nodes/ogn/python/nodes/OgnIsaacCreateRenderProduct.py", line 69, in compute
    state.handle = rep.create.render_product(
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/hyl/miniconda3/envs/env_isaaclab/lib/python3.11/site-packages/isaacsim/extscache/omni.replicator.core-1.12.27+107.3.3.lx64.r.cp311/omni/replicator/core/scripts/create.py", line 1664, in render_product
    return attach_render_products(sensor_paths, name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/hyl/miniconda3/envs/env_isaaclab/lib/python3.11/site-packages/isaacsim/extscache/omni.replicator.core-1.12.27+107.3.3.lx64.r.cp311/omni/replicator/core/scripts/create.py", line 1561, in attach_render_products
    raise ValueError("No valid sensor paths provided")

